load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/numeric/*.hpp",
]

cc_library(
    name = "numeric_conversion_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
    deps = [
        "@boost//mpl",
    ],
)

cc_library(
    name = "numeric_conversion",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [":numeric_conversion_internal"],
)
